// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/notice-bar/demo/basic.md correctly 1`] = `
<div
  style="padding:10px"
>
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <i
        class="m-icon m-icon-info-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-info-circle"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          为了确保您的资金安全，请设置支付密码
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <i
        class="m-icon m-icon-info-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-info-circle"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          为了确保您的资金安全，请设置支付密码
        </div>
      </div>
    </div>
    <div
      class="m-notice-bar-close-icon"
    >
      <i
        class="m-icon m-icon-close"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-close"
          />
        </svg>
      </i>
    </div>
  </div>
  <br />
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <i
        class="m-icon m-icon-info-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-info-circle"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          为了确保您的资金安全，请设置支付密码
        </div>
      </div>
    </div>
    <div
      class="m-notice-bar-close-icon"
    >
      <i
        class="m-icon m-icon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-right"
          />
        </svg>
      </i>
    </div>
  </div>
</div>
`;

exports[`renders ./components/notice-bar/demo/close-text.md correctly 1`] = `
<div
  style="padding:10px"
>
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <i
        class="m-icon m-icon-info-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-info-circle"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          Replace the default icon with customized text, long text, long text, long text, long text.
        </div>
      </div>
    </div>
    <div
      class="m-notice-bar-close-icon"
    >
      Close
    </div>
  </div>
</div>
`;

exports[`renders ./components/notice-bar/demo/duration.md correctly 1`] = `
<div
  style="padding:10px"
>
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <i
        class="m-icon m-icon-info-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-info-circle"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          duration
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/notice-bar/demo/icon.md correctly 1`] = `
<div
  style="padding:10px"
>
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <i
        class="m-icon m-icon-question-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-question-circle"
          />
        </svg>
      </i>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          custom icon
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="m-notice-bar"
  >
    <div
      class="m-notice-bar-icon"
    >
      <div
        style="color:#1890ff"
      >
        waring
      </div>
    </div>
    <div
      class="m-notice-bar-content"
    >
      <div
        class="m-notice-bar-marquee-wrap "
        role="marquee"
        style="overflow:hidden"
      >
        <div
          class="m-notice-bar-marquee"
          style="position:relative;right:0;white-space:nowrap;display:inline-block"
        >
          custom text
        </div>
      </div>
    </div>
  </div>
</div>
`;
